fix some truly shameful CSS formatting mistakes, add FT margin to hopefully avoid clipping off screen

--- a/src/App.css
+++ b/src/App.css
@@ -1,7 +1,7 @@
 .ft-basis {
-  height: '100%';
-  width: '100%';
-  margin: '2rem';
+  height: 100%;
+  width: 100%;
+  margin: 70px;
 }
 .ft-basis img {
   position: absolute;
