--- a/src/index.css
+++ b/src/index.css
@@ -3,4 +3,6 @@ body {
   padding: 0;
   font-family: sans-serif;
   background-color: #1b60d1;
+  height: 100vh;
+  width: 100vw;
 }
